--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 authors = ["taylor thompson <jamestthompson3@gmail.com>"]
 
 [lib]
-#crate-type = ["cdylib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2.13"
