--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 [dependencies]
 wasm-bindgen = "0.2.13"
 rand = "0.5.5"
-
+console_error_panic_hook = "0.1.4"
 [profile.release]
 # Include function names in the `.wasm` for better debugging and
 # profiling. Comment this out if you're trying to create the smallest `.wasm`
