--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,15 @@ authors = ["taylor thompson <jamestthompson3@gmail.com>"]
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.13"
 rand = "0.5.5"
 console_error_panic_hook = "0.1.4"
+serde = "^1.0.59"
+serde_derive = "^1.0.59"
+
+[dependencies.wasm-bindgen]
+version = "^0.2.13"
+features = ["serde-serialize"]
+
 [profile.release]
 # Include function names in the `.wasm` for better debugging and
 # profiling. Comment this out if you're trying to create the smallest `.wasm`
