Add location data as return value for tick function.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ chapter-*
 wasm_game_of_life.d.ts
 wasm_game_of_life.js
 wasm_game_of_life_bg.wasm
+
+# Ignore all IntelliJ project configurations
+.idea
