--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,10 @@ rand = "0.5.5"
 console_error_panic_hook = "0.1.4"
 serde = "^1.0.59"
 serde_derive = "^1.0.59"
+js-sys = "0.3.17"
 
 [dependencies.wasm-bindgen]
-version = "^0.2.13"
+version = "^0.2.40"
 features = ["serde-serialize"]
 
 [profile.release]
