[Engine] Improvements + moving to wasm-pack

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "@wasm-tool/wasm-pack-plugin": "^0.2.7"
   }
 }
